--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,58 @@
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-blinker==1.7.0
-Brlapi==0.8.5
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.1.3
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-cryptography==41.0.7
-cupshelpers==1.0
-dbus-python==1.3.2
-defer==1.0.6
-distro==1.9.0
-distro-info==1.7+build1
-httplib2==0.20.4
-idna==3.6
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-louis==3.29.0
-markdown-it-py==3.0.0
+accelerate==0.33.0
+blinker==1.8.2
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
+decorator==4.4.2
+ffmpeg-python==0.2.0
+filelock==3.15.4
+Flask==3.0.3
+fsspec==2024.6.1
+future==1.0.0
+huggingface-hub==0.24.5
+idna==3.7
+imageio==2.35.0
+imageio-ffmpeg==0.5.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
 MarkupSafe==2.1.5
-mdurl==0.1.2
-netaddr==0.8.0
-netifaces==0.11.0
-oauthlib==3.2.2
-olefile==0.46
-pexpect==4.9.0
-pillow==10.2.0
-ptyprocess==0.7.0
-pycairo==1.25.1
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu1
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-screen-resolution-extra==0.0.0
-setuptools==68.1.2
-six==1.16.0
-systemd-python==235
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-wadllib==1.3.6
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
+moviepy==1.0.3
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+packaging==24.1
+pillow==10.4.0
+proglog==0.1.10
+psutil==6.0.0
+pycparser==2.22
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.4
+scipy==1.14.0
+setuptools==72.1.0
+soundfile==0.12.1
+sympy==1.13.2
+timm==1.0.8
+tokenizers==0.19.1
+torch==2.4.0
+torchvision==0.19.0
+tqdm==4.66.5
+transformers==4.44.0
+triton==3.0.0
+typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
